<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Callout</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_favorites">Favorites</string>
    <string name="action_personal_details">Personal Details</string>
    <string name="action_master_club_list">Club Master List</string>
    <string name="action_calendar">Calendar</string>
    <string name="title_activity_club_master_list">Club Master List</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_favorites">Favorites</string>
    <string name="title_activity_calendar">Calendar</string>
    <string name="title_activity_personal_details">Personal Details</string>
    <string name="title_activity_club_page">Club Page</string>
    <string name="welcome_message">Welcome to Callout!</string>
    <string name="club_organization_radio_button">Organization</string>
    <string name="go">Go!</string>
    <string name="student">Student</string>
    <string name="club_organization">Club/Organization</string>
    <string name="title_activity_club">ClubActivity</string>
    <string name="title_activity_student">StudentActivity</string>
    <string name="title_activity_student_calender">StudentCalender</string>
    <string name="title_activity_club_sign_in">ClubSignIn</string>
    <string name="title_activity_club_club_view">ClubClubView</string>

    <!--For user details-->
    <string name="pref_previously_started">False</string>
    <string name="callout_file_key">calloutfilez</string>
    <string name="user_favorites">userfavorites</string>
    <string name="user_preferences">userpreferences</string>
    <string name="filter_by_category">Filter by Category</string>
    <string name="filter_other">Other</string>
    <string name="filter_academic">Academic</string>
    <string name="filter_hobby">Hobby</string>
    <string name="filter_sports">Sports</string>
    <string name="title_activity_add_calendar_event">AddCalendarEventActivity</string>
    <string name="add">Add</string>
    <string name="title_activity_club_calendar">ClubCalendarActivity</string>
    <string name="title_activity_add_club">Add Club</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="clubField">Club putting on the event</string>
    <string name="add_event">Add an event</string>
    <string name="club_image">ClubImage</string>
    <string name="all">All</string>
    <string name="club_bio">Club Bio</string>
    <string name="club_name">Club Name</string>
    <string name="upcoming_events">Upcoming Events</string>
    <string name="favorite">Favorite</string>
</resources>
