<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="1">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/club_name"
        android:layout_margin="@dimen/activity_horizontal_margin"
        android:id="@+id/clubName"
        android:layout_below="@+id/joinButton"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/upcoming_events"
        android:id="@+id/eventTitle"
        android:layout_margin="@dimen/activity_horizontal_margin"
        android:layout_centerVertical="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"/>

    <ListView
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:id="@+id/eventList"
        android:layout_below="@+id/eventTitle"
        android:layout_margin="@dimen/activity_horizontal_margin"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"/>

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:background="@android:color/holo_blue_light"
        android:text="@string/favorite"
        android:id="@+id/joinButton"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:layout_marginTop="@dimen/activity_vertical_margin" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/club_bio"
        android:id="@+id/clubBio"
        android:layout_below="@+id/clubName"
        android:layout_alignParentLeft="true"
        android:layout_margin="@dimen/activity_horizontal_margin"
        android:layout_alignParentStart="true"
        android:textColor="@color/DarkSlateGray" />

    <!--
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Back"
        android:id="@+id/studentClubViewBackButtonId"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"/>
        -->
</RelativeLayout>